--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -1,3 +1,4 @@
+{% load admin_urls %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +9,13 @@
 
 {% block content %}
 {% endblock %}
+
+<hr />
+<div>
+    {% if request.user.is_authenticated %}
+        <a href="{% url 'logout' %}">Logout</a>
+    {% endif %}
+</div>
 
 </body>
 </html>
